feat: add new favorites features
